--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = [appAuthRedirectScheme: 'com.google.codelabs.appauth' ]
     }
     buildTypes {
         release {
@@ -26,5 +27,5 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.squareup.okhttp3:okhttp:3.2.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'net.openid:appauth:0.2.0'
+    implementation 'net.openid:appauth:0.7.0'
 }
